# bookmark-maxxing

./: .env.example  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  Makefile  Modelfile  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  docker-compose.yml  pyproject.toml
.agents/skills/testing-x-bookmark-cli/: SKILL.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: config.yml  framework-improvement.md  new-bookmark-maxxing-issue.md  skill-proposal.md
.github/workflows/: ci.yml
docs/: framework.md  live-smoke-test.md  publishing-playbook.md  quickstart.md  release-checklist.md  x-mcp-integration.md
docs/adapters/: linkedin-saved-posts.md
docs/specs/: x-mcp-bookmark-ingestion.md
examples/: bookmarks.sample.json  issue-001-bookmarks-to-skills.md  skills.sample.md  source-map.sample.md  summaries.sample.md
issues/001-turning-bookmarks-into-skills/: article.md  skills.md  source-map.md
prompts/: extract-skills.md  read-bookmarks.md  write-article.md
recipes/: linkedin-saves-to-skills.md
schemas/: bookmark-item.schema.json
src/bookmark_maxxing/: __init__.py  cli.py  extract.py  x_mcp.py
templates/: article-template.md  skill-card.md  source-map.md
tests/: test_extract.py  test_x_mcp.py
tests/fixtures/: x_bookmarks_pages.json  x_mcp_bookmarks.json
