[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bookmark-maxxing"
version = "0.1.0"
description = "Turn saved links into reusable skills."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }

[project.scripts]
bookmark-maxxing = "bookmark_maxxing.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
